<resources>
    <string name="app_name">Bunny Kingdom Deluxe</string>
    <string name="nombre">Nombre</string>
    <string name="jugadas">Partidas jugadas</string>
    <string name="ganadas">Partidas ganadas</string>
    <string name="max_puntuacion">Máxima puntuacion</string>
    <string name="cero">0</string>
    <string name="Partidas">Partidas</string>
    <string name="Perfiles">Perfiles</string>
    <string name="Ranking">Ranking</string>
    <string name="Usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Olvidado">¿Has olvidado la contraseña?</string>
    <string name="Entrar">Entrar</string>
    <string name="Registrarse">Registrarse</string>
    <string name="Color">Color</string>
    <string name="Puntos">Puntos</string>
    <string name="Puntuacion">Score</string>
    <string name="Puesto">Puesto</string>
    <string name="NuevaPartida">Nueva Partida</string>
    <string name="VerPartidas">Ver Partidas</string>
    <string name="Salir">Salir</string>
    <string name="Sombreado">Sombreado</string>
    <string name="Fondo">Fondo</string>
    <string name="AddFeudo">Añadir\nfeudo</string>
    <string name="TerminarTurno">Terminar\nturno</string>
    <string name="Añadir">Añadir</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Cerrar">Cerrar</string>
    <string name="Email">Email</string>
    <string name="RepPass">Repite Contraseña</string>
    <string name="Modificar">Modificar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Comenzar">Comenzar</string>
    <string name="Musica">Música</string>
    <string name="NuevoPerfil">Nuevo Perfil</string>
    <string name="CerrarSesion">Cerrar \nSesión</string>
    <string name="SeleccionJugador">Selecciona Jugadores</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Si">Si</string>
    <string name="No">No</string>
    <string name="Foto">¿Quieres hacer una foto?</string>
    <string name="CompletarCampos">Completa todos los campos</string>
    <string name="ErrorInicio">Error al iniciar sesión</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="ErrorNumJugadores">Selecciona entre 2 y 4 jugadores</string>
    <string name="ErrorColorJugadores">No puede haber 2 jugadores \ncon el mismo color</string>
    <string name="NoNum">No has introducido un número</string>
    <string name="save">Guardar</string>
    <string name="IntroducePuntos">Introduce puntos \nde </string>
    <string name="AlertPergamino">Puntos de pergaminos </string>
    <string name="IntroduceEmail">Introduce email </string>
    <string name="ErrorEmail">No es un email valido </string>
    <string name="RestaurarContraseña">Restaurar Contraseña </string>
    <string name="SeguroEliminar">¿Estás seguro?</string>
    <string name="TerminarTurnoJugador">¿Quieres terminar el turno?</string>
    <string name="RegistrarUsuario">Registrar Usuario</string>
    <string name="Turno">Turno</string>
    <string name="ErrorNombre">Tiene que tener entre 4 y 10 caracteres</string>
    <string name="RankingPuntos">Ranking puntuación</string>
    <string name="RankingVictorias">Ranking Victorias</string>
    <string name="RankingPorcentaje">Porcentaje de victorias Ranking </string>
    <string name="pulsaMarco">Pulsa sobre un jugador para elegir el color </string>
    <string name="salirPartida">¿Quieres salir? </string>
    <string name="Ronda">Ronda </string>



</resources>