<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/iMarco"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/Fondo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/porton"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/enchanted_land"
        android:text="@string/RegistrarUsuario"
        android:textColor="#FF5722"
        android:textSize="70sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iMarco"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/bRegistarse"
        android:layout_width="217dp"
        android:layout_height="59dp"
        android:backgroundTint="#E35311"
        android:fontFamily="@font/enchanted_land"
        android:text="@string/Registrarse"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:cornerRadius="10dp"
        app:iconTint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline19"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/bCancelar"
        android:layout_width="173dp"
        android:layout_height="52dp"
        android:backgroundTint="#E35311"
        android:fontFamily="@font/enchanted_land"
        android:text="@string/Cancelar"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:cornerRadius="10dp"
        app:iconTint="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/guideline24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bRegistarse"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <ImageView
        android:id="@+id/fEmail"
        android:layout_width="352dp"
        android:layout_height="61dp"
        android:alpha="@dimen/material_emphasis_disabled"
        android:contentDescription="@string/Sombreado"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline11"
        app:srcCompat="@drawable/shape_black" />

    <ImageView
        android:id="@+id/fPass"
        android:layout_width="352dp"
        android:layout_height="61dp"
        android:alpha="@dimen/material_emphasis_disabled"
        android:contentDescription="@string/Sombreado"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline13"
        app:srcCompat="@drawable/shape_black" />

    <ImageView
        android:id="@+id/fPass2"
        android:layout_width="352dp"
        android:layout_height="61dp"
        android:alpha="@dimen/material_emphasis_disabled"
        android:contentDescription="@string/Sombreado"
        app:layout_constraintBottom_toTopOf="@+id/guideline19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline14"
        app:srcCompat="@drawable/shape_black" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/enchanted_land"
        android:gravity="center"
        android:hint="@string/Email"
        android:inputType="text"
        android:backgroundTint="#00FFFFFF"
        android:singleLine="false"
        android:textColor="#ED5C2E"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <EditText
        android:id="@+id/regPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/enchanted_land"
        android:gravity="center"
        android:hint="@string/Contraseña"
        android:backgroundTint="#00FFFFFF"
        android:inputType="textPassword"
        android:singleLine="false"
        android:textColor="#ED5C2E"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline13" />

    <EditText
        android:id="@+id/regPass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/enchanted_land"
        android:gravity="center"
        android:hint="@string/RepPass"
        android:inputType="textPassword"
        android:backgroundTint="#00FFFFFF"
        android:singleLine="false"
        android:textColor="#ED5C2E"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.56" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />

    <Switch
        android:id="@+id/sMRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FF5722"
        android:checked="true"
        android:fontFamily="@font/enchanted_land"
        android:showText="false"
        android:splitTrack="false"
        android:text="@string/Musica"
        android:textColor="#FF5722"
        android:textColorHighlight="#FF5722"
        android:textColorLink="#FF5722"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline25"
        app:layout_constraintTop_toTopOf="@+id/guideline24"
        app:layout_constraintVertical_bias="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="60dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="18dp" />

</androidx.constraintlayout.widget.ConstraintLayout>