<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/muropiedra5"

    tools:context=".perfiles.Perfiles_adapter$Perfil_Detalle">
    <LinearLayout
        android:id="@+id/LinEstandartes"
        android:layout_width="406dp"
        android:layout_height="170dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/framePartidas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/bImgPartidas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#00FFFFFF"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/estandarte" />

            <LinearLayout
                android:id="@+id/LinTxtPartidas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tPartidas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:fontFamily="@font/enchanted_land"
                    android:text="@string/Partidas"
                    android:textAlignment="viewStart"
                    android:textColor="#FF9800"
                    android:textSize="34sp" />
            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/FramePerfiles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/bImgPerfiles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/estandarte" />

            <LinearLayout
                android:id="@+id/LinTxtPerfiles"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tPerfiles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/enchanted_land"
                    android:text="@string/Perfiles"
                    android:textAlignment="center"
                    android:textColor="#FF9800"
                    android:textSize="34sp" />

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/FrameRanking"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/bImgRanking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/estandarte" />

            <LinearLayout
                android:id="@+id/LinTxtRanking"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tRanking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/enchanted_land"
                    android:text="@string/Ranking"
                    android:textAlignment="center"
                    android:textColor="#FF9800"
                    android:textSize="34sp" />
            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imgPergam"
        android:layout_width="382dp"
        android:layout_height="520dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinEstandartes"
        app:srcCompat="@drawable/pergamino" />

    <ImageView
        android:id="@+id/imgPerfil"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/conejo6"
        app:layout_constraintBottom_toBottomOf="@+id/iMarco"
        app:layout_constraintEnd_toEndOf="@+id/iMarco"
        app:layout_constraintStart_toStartOf="@+id/iMarco"
        app:layout_constraintTop_toTopOf="@+id/guideline21" />

    <ImageView
        android:id="@+id/iMarco"
        android:layout_width="173dp"
        android:layout_height="165dp"
        android:backgroundTint="#FBF7F7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline21"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/frame" />

    <EditText
        android:id="@+id/eNombre"
        android:layout_width="395dp"
        android:layout_height="53dp"
        android:backgroundTint="#00FFFFFF"
        android:ems="10"
        android:fontFamily="@font/enchanted_land"
        android:inputType="textPersonName"
        android:text="Miguel Angel"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPerfil" />

    <LinearLayout
        android:id="@+id/linearLayout16"
        android:layout_width="232dp"
        android:layout_height="43dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eNombre">

        <TextView
            android:id="@+id/tPartidasJugadas"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/enchanted_land"
            android:inputType="textPersonName"
            android:text="@string/jugadas"
            android:textColor="#000000"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/NumPartidasJugadas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/enchanted_land"
            android:text="5"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout17"
        android:layout_width="233dp"
        android:layout_height="42dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout16">

        <TextView
            android:id="@+id/tPartidasGanadas"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/enchanted_land"
            android:inputType="textPersonName"
            android:text="@string/ganadas"
            android:textColor="#000000"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/NumPartidasGanadas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/enchanted_land"
            android:text="2"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout18"
        android:layout_width="254dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout17">

        <TextView
            android:id="@+id/tMaxPuntuacion"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/enchanted_land"
            android:inputType="textPersonName"
            android:text="@string/max_puntuacion"
            android:textColor="#000000"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/NumMaxPuntuacion"
            android:layout_width="37dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/enchanted_land"
            android:text="125"
            android:textSize="34sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="235dp" />

    <ImageButton
        android:id="@+id/imgSello"
        android:layout_width="156dp"
        android:layout_height="107dp"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="centerInside"
        android:src="@drawable/sello1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout18" />

    <ImageButton
        android:id="@+id/imgSello2"
        android:layout_width="156dp"
        android:layout_height="107dp"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="centerInside"
        android:src="@drawable/sello1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout18" />

    <ImageButton
        android:id="@+id/imgSello3"
        android:layout_width="156dp"
        android:layout_height="107dp"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="centerInside"
        android:src="@drawable/sello1"
        app:layout_constraintEnd_toStartOf="@+id/tModificar"
        app:layout_constraintStart_toEndOf="@+id/tCancela"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout18" />

    <TextView
        android:id="@+id/tCancela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:fontFamily="@font/enchanted_land"
        android:text="@string/Cancelar"
        android:textColor="#FFC107"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgSello"
        app:layout_constraintEnd_toEndOf="@+id/imgSello"
        app:layout_constraintStart_toStartOf="@+id/imgSello"
        app:layout_constraintTop_toTopOf="@+id/imgSello" />

    <TextView
        android:id="@+id/tBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:fontFamily="@font/enchanted_land"
        android:text="@string/Eliminar"
        android:textColor="#FFC107"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgSello3"
        app:layout_constraintEnd_toEndOf="@+id/imgSello3"
        app:layout_constraintStart_toStartOf="@+id/imgSello3"
        app:layout_constraintTop_toTopOf="@+id/imgSello3" />

    <TextView
        android:id="@+id/tModificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:fontFamily="@font/enchanted_land"
        android:text="@string/Modificar"
        android:textColor="#FFC107"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgSello2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imgSello2"
        app:layout_constraintTop_toTopOf="@+id/imgSello2" />

    <Switch
        android:id="@+id/sMPerfilDetalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FF5722"
        android:checked="true"
        android:fontFamily="@font/enchanted_land"
        android:showText="false"
        android:splitTrack="false"
        android:text="@string/Musica"
        android:textColor="#FF5722"
        android:textColorHighlight="#FF5722"
        android:textColorLink="#FF5722"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline25"
        app:layout_constraintTop_toTopOf="@+id/guideline24"
        app:layout_constraintVertical_bias="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="60dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="18dp" />

</androidx.constraintlayout.widget.ConstraintLayout>