<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/textscrollsinfondo"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialog_title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/enchanted_land"
        android:gravity="center"
        android:text="@string/SeguroEliminar"
        android:textColor="#FF5722"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dialog_cancel_button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/dialog_cancel_button2"
        android:layout_width="156dp"
        android:layout_height="107dp"
        android:background="@drawable/sello1"
        android:backgroundTint="#00FFFFFF"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:scaleType="centerInside"
        android:src="@drawable/sello1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dialog_salir_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title2" />

    <ImageButton
        android:id="@+id/dialog_salir_button"
        android:layout_width="156dp"
        android:layout_height="107dp"
        android:background="@drawable/sello1"
        android:backgroundTint="#00FFFFFF"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:scaleType="centerInside"
        android:src="@drawable/sello1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dialog_cancel_button2"
        app:layout_constraintTop_toTopOf="@+id/guideline33" />

    <TextView
        android:id="@+id/tCancelarDialog2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/enchanted_land"
        android:text="@string/Cancelar"
        android:textColor="#FFC107"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_cancel_button2"
        app:layout_constraintEnd_toEndOf="@+id/dialog_cancel_button2"
        app:layout_constraintStart_toStartOf="@+id/dialog_cancel_button2"
        app:layout_constraintTop_toTopOf="@+id/guideline33" />

    <TextView
        android:id="@+id/tSalirDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/enchanted_land"
        android:text="@string/Salir"
        android:textColor="#FFC107"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_salir_button"
        app:layout_constraintEnd_toEndOf="@+id/dialog_salir_button"
        app:layout_constraintStart_toStartOf="@+id/dialog_salir_button"
        app:layout_constraintTop_toTopOf="@+id/dialog_salir_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
